# rus

./: .dockerignore  .env.example  .env.saas  .env.standalone  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.saas  README.md  build.rs  compose-sqlite.yml  compose.dev.yml  compose.yml  init.sql  justfile  vibe-coding.md
.claude/: settings.local.json
.devcontainer/: devcontainer.json
.forgejo/workflows/: build-oci-image.yml  check.yml
.github/workflows/: build-and-push-image.yml  build-publish.yml  build.yml
data/: rus.db
docs/: PROMPT_CHECKLIST.md  SSO-Implementation.md  implementation-blueprint.md  phase1-specification.md  phase2-specification.md
docs/prompts/: chunk-01-config-system.md  chunk-02-password-validation.md  chunk-03-login-attempts-tracking.md  chunk-04-account-lockout.md  chunk-05-url-validation.md  chunk-06-health-check.md  chunk-07-refresh-token-schema.md  chunk-08-refresh-token-generation.md  chunk-09-auth-response-update.md  chunk-10-token-refresh-endpoint.md  chunk-11-click-history-schema.md  chunk-12-click-recording.md  chunk-13-click-history-cleanup.md  chunk-14-click-history-api.md  chunk-15-qr-dependencies.md  chunk-16-qr-png-generation.md  chunk-17-qr-logo-branding.md  chunk-18-qr-svg-generation.md  chunk-19-qr-api-endpoint.md  chunk-20-config-api-endpoint.md  chunk-21-frontend-color-variables.md  chunk-22-global-styles-update.md  chunk-23-navigation-component.md  chunk-24-index-page-redesign.md  chunk-25-login-page-redesign.md  chunk-26-signup-page-redesign.md  chunk-27-auth-js-refresh-storage.md  chunk-28-dashboard-base-redesign.md  chunk-29-dashboard-url-cards.md  chunk-30-dashboard-url-actions.md  chunk-31-dashboard-sorting.md  chunk-32-dashboard-filtering.md  chunk-33-chartjs-integration.md  chunk-34-click-history-modal.md  chunk-35-line-chart.md  chunk-36-table-visualization.md  chunk-37-qr-code-modal.md  chunk-38-mobile-responsive.md  chunk-39-docker-env-vars.md  chunk-40-dockerfile-update.md  (+3 more)
docs/superpowers/plans/: 2026-03-26-basic-themes.md  2026-04-08-high-contrast-mode.md
docs/superpowers/specs/: 2026-04-08-high-contrast-mode-design.md
examples/: compose.yml
oci-build/: Dockerfile  build.nu  config.yml  get-tags.nu  setup.nu
src/: config.rs  db.rs  lib.rs  main.rs  models.rs  security.rs  testing.rs
src/auth/: jwt.rs  middleware.rs  mod.rs
src/handlers/: abuse.rs  admin.rs  auth.rs  mod.rs  pages.rs  saas_auth.rs  urls.rs  webhook.rs
src/oidc/: jit.rs  mod.rs  rp.rs  session.rs  verifier.rs
src/url/: mod.rs  qr.rs  shortener.rs
static/: 404.html  admin.html  auth.js  dashboard.html  index.html  login.html  maintenance.html  report.html  saas-refresh.js  setup.html  signup.html  styles.css  theme.js
tests/: integration_saas.rs  integration_standalone.rs
