[package]
name = "rus"
version = "0.15.1"
edition = "2021"

[[bin]]
name = "rus"
path = "src/main.rs"
required-features = ["standalone"]

[[bin]]
name = "rus-saas"
path = "src/main.rs"
required-features = ["saas"]

[features]
default = ["standalone"]
standalone = ["dep:bcrypt", "dep:actix-web-httpauth"]
saas = []

[dependencies]
actix-web = "4.4"
actix-files = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full", "time"] }
rand = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }
bcrypt = { version = "0.15", optional = true }
jsonwebtoken = "9.2"
chrono = { version = "0.4", features = ["serde"] }
actix-web-httpauth = { version = "0.8", optional = true }
dotenvy = "0.15"
qrcode = "0.14"
image = "0.25"
base64 = "0.22"
regex = "1.10"
url = "2.5"
actix-rt = "2.9"
