[[bin]]
name = "rus"
path = "src/main.rs"
required-features = ["standalone"]

[[bin]]
name = "rus-saas"
path = "src/main.rs"
required-features = ["saas"]

[package]
name = "rus"
version = "1.0.0"
edition = "2021"
default-run = "rus"

[features]
default = ["standalone"]
standalone = [
    "dep:bcrypt",
    "dep:argon2",
    "dep:actix-web-httpauth",
]
saas = [
    "dep:hmac",
    "dep:sha2",
    "dep:hex",
]

[dependencies]
actix-web = "4.4"
actix-governor = "0.10"
serde_json = "1.0"
rand = "0.8"
jsonwebtoken = "9.2"
dotenvy = "0.15"
qrcode = "0.14"
image = "0.25"
base64 = "0.22"
url = "2.5"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.tokio]
version = "1.35"
features = [
    "full",
    "time",
]

[dependencies.rusqlite]
version = "0.32"
features = ["bundled"]

[dependencies.bcrypt]
version = "0.15"
optional = true

[dependencies.argon2]
version = "0.5"
optional = true

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.actix-web-httpauth]
version = "0.8"
optional = true

[dependencies.hmac]
version = "0.12"
optional = true

[dependencies.sha2]
version = "0.10"
optional = true

[dependencies.hex]
version = "0.4"
optional = true
